--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
   "name": "Sparcet demo",
-  "version": "0.01",
+  "version": "1.0",
   "manifest_version": 2,
   "description": "Displays Lists of sparcet stuff.",
+  "options_page": "options.html",
   "browser_action": {
     "default_icon":  "icon.png",
     "popup": "popup.html"
   },
   "icons": {
-    "16":  "beer16.png",
-    "48":  "icon.png",
-    "128": "beer128.png"
-  },
+    "16": "icon-16.png",
+    "48": "icon-48.png",
+    "128": "icon-128.png" },
   "permissions": [
-    "http://api.flickr.com/"
+    "<all_urls>"
   ]
+
 }
