--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Sparcet demo",
+  "name": "Sparcet Quickview",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Displays Lists of sparcet stuff.",
+  "description": "Displays Lists of recent Sparcets.",
   "options_page": "options.html",
   "browser_action": {
     "default_icon":  "icon.png",
