--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
   "description": "Displays Lists of recent Sparcets.",
   "options_page": "options.html",
   "browser_action": {
-    "default_icon":  "icon.png",
+    "default_icon":  "icon-48.png",
     "popup": "popup.html"
   },
   "icons": {
     "16": "icon-16.png",
     "48": "icon-48.png",
-    "128": "icon128.png" },
+    "128": "icon-128.png" },
   "permissions": [
     "https://*.sparcet.com/"
   ]
