--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Sparcet Quickview",
-  "version": "1.6",
+  "version": "1.1",
   "manifest_version": 2,
   "description": "Displays Lists of recent Sparcets.",
   "options_page": "options.html",
   "browser_action": {
     "default_icon":  "icon-48.png",
-    "popup": "popup.html"
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icon-16.png",
