--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Sparcet Quickview",
-  "version": "1.1",
+  "version": "1.2",
   "manifest_version": 2,
-  "description": "Displays Lists of recent Sparcets.",
+  "description": "Displays list of recent Sparcets.",
   "browser_action": {
     "default_icon":  "icon-48.png",
     "default_popup": "popup.html"
